# samkorn.me

./: .gitignore  .gitmodules  README.md  RESUME.md  colors.txt  index.html  resume.html
css/: custom.css
js/unslider-master/src/js/: unslider.js
old-website-2015/css/: custom.css
public/: index.html
python-markdown/: Dockerfile  pyproject.toml
python-markdown/code/: main.py
python-markdown/templates/: resume.html
resume-json/: cluster-update.sh  package-lock.json  package.json  resume.json  resume.yaml
resume-json/public/: index.html
