[tool.poetry]
name = "resume-app"
version = "0.1.0"
description = ""
authors = ["Sam Korn <korn94sam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
markdown = "^3.5"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"
awsume = "^4.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
